# tzar

./: LICENSE  README.md  pyproject.toml
config/: default.toml
target-formats/: archiving.csv  both.csv  compression.csv
tests/: test_tzar.py
tzar/: __init__.py  cli.py  config.py  templates.py
