[tool.poetry]
name = "tzar"
version = "0.1.4"
description = "Manage: Tar, Zip, Anything Really!"
authors = ["Daniel Valenzuela <daniel@admetricks.com>"]
readme = "README.md"
repository = "https://github.com/DanielVZ96/tzar"
keywords = ["compress", "extract", "tar", "zip"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0.1"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
tzar = 'tzar.cli:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
